use draw function from lygia for debugging

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lygia"]
 	path = lygia
 	url = https://github.com/patriciogonzalezvivo/lygia.git
+[submodule "lygia_examples"]
+	path = lygia_examples
+	url = https://github.com/patriciogonzalezvivo/lygia_examples
